tests/paczka1/fuzzy1/43822695.err
Error in line 6: 7JevYHdKf A406 9,8
Error in line 12: o4s3R4 A406 67,8
Error in line 7: yDwJd1V A714 24,8
Error in line 25: Ls8B5Vep3u A5	7 12,2
Error in line 17: o4s3R4 A714 12,8
Error in line 33: Ls8B5Vep3u A714 35,4
